--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "mongoose": "^8.1.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
